--- a/package.json
+++ b/package.json
@@ -3,6 +3,6 @@
     "shields-lightweight": "^0.1.0"
   },
   "scripts": {
-    "start": "node ./src/combine.js"
+    "start": "npm i && node ./src/build.js"
   }
 }
